syntax = "proto3";

package blog;

// output of the generated file/code
option go_package = "./v1/pb/blog";

message Address {
  string id = 1;
  string city = 2;
  string country = 3;
  string zip_code = 4;
  string postal_address = 5;
  string created = 6;
  string updated = 7;
}

message Blog {
  string id = 1;
  string title = 2;
  string content = 3;
  // list of authors
  repeated Author author_id = 4;
  string created = 5;
  string updated = 6;
}

message Author {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  Address address = 5;
  // list of blog items
  repeated Blog blog_id = 6;
  string created = 7;
  string updated = 8;
}

message CreateAuthorRequest {
  Author author = 1;
}

message CreateAuthorResponse {
  Author author = 1; // will contain an ID of the created Author if successful
}

service BlogService {
  // A unary RPC to create an author
  rpc CreateAuthor (CreateAuthorRequest) returns (CreateAuthorResponse){};
}
